# otus_project_cod

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
src/: detector.cpp  detector.h  multiheaders.h  publisher.cpp  publisher.h  streamer.cpp  streamer.h  subscriber.py  visualizer.cpp  visualizer.h
